<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@android:color/white"
    >

    <FrameLayout
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_250sdp"
        android:background="@color/colorBg"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/app_name"
            android:fontFamily="@font/poppins_medium"
            android:textSize="@dimen/_20ssp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/_10sdp"
            android:textStyle="bold"
            android:textColor="@android:color/white"
            />

    </FrameLayout>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="@dimen/_150sdp"
        android:layout_marginStart="@dimen/_15sdp"
        android:layout_marginEnd="@dimen/_15sdp"
        android:layout_marginBottom="@dimen/_15sdp"
        app:cardElevation="@dimen/_20sdp"
        app:cardCornerRadius="@dimen/_10sdp"
        app:cardBackgroundColor="@android:color/white"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/_20sdp"
            >

            <TextView
                android:id="@+id/tvSignIn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_signin"
                android:fontFamily="@font/poppins_medium"
                android:textSize="@dimen/_15ssp"
                android:textStyle="bold"
                android:textColor="@android:color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvNineOne"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_91"
                android:fontFamily="@font/poppins_light"
                android:textSize="@dimen/_14ssp"
                android:textColor="@android:color/black"
                android:padding="0dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="@id/tilEnterMobile"
                app:layout_constraintTop_toTopOf="@id/tilEnterMobile" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilEnterMobile"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                app:boxStrokeColor="@color/colorBg"
                android:layout_marginTop="@dimen/_20sdp"
                app:layout_constraintStart_toEndOf="@+id/tvNineOne"
                app:layout_constraintTop_toBottomOf="@+id/tvSignIn"
                android:layout_marginStart="@dimen/_5sdp"
                app:layout_constraintEnd_toEndOf="parent"
                android:hint="@string/hint_enter_your_mobile_number"
                app:hintTextColor="@android:color/black"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="number"
                    android:maxLength="10"
                    android:textColorHint="@android:color/black"
                    android:textColor="@android:color/black"
                    android:textCursorDrawable="@null"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/tvSignInBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_signin"
                android:fontFamily="@font/poppins_medium"
                android:textSize="@dimen/_10ssp"
                android:background="@drawable/bg_auth_shape"
                android:backgroundTint="@color/colorBg2"
                android:layout_marginTop="@dimen/_20sdp"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:paddingStart="@dimen/_15sdp"
                android:paddingTop="@dimen/_5sdp"
                android:paddingBottom="@dimen/_5sdp"
                android:paddingEnd="@dimen/_15sdp"
                app:layout_constraintTop_toBottomOf="@+id/tilEnterMobile" />

            <TextView
                android:id="@+id/tvMoveToSignUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hint_dont_t_have_an_account"
                android:fontFamily="@font/poppins_light"
                android:textSize="@dimen/_10ssp"
                android:layout_marginTop="@dimen/_10sdp"
                android:textColor="@android:color/black"
                android:padding="0dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvSignInBtn" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>