<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorBg"
    >

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/verify_otp"
        android:fontFamily="@font/poppins_medium"
        android:textSize="@dimen/_20ssp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/_10sdp"
        android:textStyle="bold"
        android:textColor="@android:color/white"
        />

    <TextView
        android:id="@+id/tvMsgTop"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTitle"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center"
        android:text="@string/verify_otp_msg_top"
        android:layout_marginStart="@dimen/_30sdp"
        android:layout_marginEnd="@dimen/_30sdp"
        android:fontFamily="@font/poppins_medium"
        android:textSize="@dimen/_14ssp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/_30sdp"
        android:textStyle="bold"
        android:textColor="@android:color/white"
        />

    <com.mukesh.OtpView
        android:id="@+id/otpView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvMsgTop"
        android:layout_marginTop="@dimen/_30sdp"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:OtpItemCount="4"
        app:OtpItemSpacing="@dimen/_25sdp"
        app:OtpLineColor="@android:color/white"
        android:inputType="number"
        android:gravity="center"
        app:OtpViewType="line"
        />

    <TextView
        android:id="@+id/tvMsgBottom"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/otpView"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center"
        android:text="@string/verify_otp_msg_bottom"
        android:layout_marginStart="@dimen/_30sdp"
        android:layout_marginEnd="@dimen/_30sdp"
        android:fontFamily="@font/poppins_medium"
        android:textSize="@dimen/_14ssp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/_30sdp"
        android:textStyle="bold"
        android:textColor="@android:color/white"
        />

    <TextView
        android:id="@+id/tvVerifyOtpBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/verify_otp"
        android:fontFamily="@font/poppins_medium"
        android:textSize="@dimen/_10ssp"
        android:background="@drawable/bg_auth_shape"
        android:backgroundTint="@color/colorBg2"
        android:layout_marginTop="@dimen/_40sdp"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:paddingStart="@dimen/_15sdp"
        android:paddingTop="@dimen/_5sdp"
        android:paddingBottom="@dimen/_5sdp"
        android:paddingEnd="@dimen/_15sdp"
        app:layout_constraintTop_toBottomOf="@+id/tvMsgBottom" />

</androidx.constraintlayout.widget.ConstraintLayout>